--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -1,1 +1,12 @@
-<p>vai toamr no<p/>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tentando</title>
+</head>
+<body>
+    <h1>Faça!</h1>
+</body>
+</html>
