--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tentando</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Móveis Customizados</title>
 </head>
+
 <body>
-    <h1>Faça! Faça!</h1>
+	<img src="img/balls-decoration.svg"/>
+
+	<div>
+		<img src="img/image 1.jpg"/>
+		
+	</div>
 </body>
+
 </html>
