--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -8,11 +8,27 @@
 </head>
 
 <body>
-	<img src="img/balls-decoration.svg"/>
+	<img src="img/balls-decoration.svg" alt="Bolas laranjas no canto inferior direito" />
 
 	<div>
-		<img src="img/image 1.jpg"/>
-		
+		<img src="img/image 1.jpg" alt="Pessoa em uma sala" />
+
+		<h1>Ambientes únicos para você!</h1>
+		<p>
+			Nós criamos ambientes exclusívos e únicos, com muito bom gosto e profissionalismo, investimos tempo e dedicação no seu projeto.
+		</p>
+		<p>
+			Tenha ambientes limpos e bem decorados, transmitindo elegância e finesse para todo aquele que estiver ali.
+		</p>
+	</div>
+
+	<div id="footer">
+		<a href="https://instagram.com">
+			Instagram
+		</a>
+		<a href="moveis.com">
+			Fale Conosco
+		</a>
 	</div>
 </body>
 
