--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+	<head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Móveis Customizados</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:ital,wght@0,700;1,400&display=swap" rel="stylesheet">	
 </head>
 
 <body>
-	<img src="img/balls-decoration.svg" alt="Bolas laranjas no canto inferior direito" />
 
 	<div>
 		<img src="img/image 1.jpg" alt="Pessoa em uma sala" />
 
-		<h1>Ambientes únicos para você!</h1>
+		<h1>Ambientes <span>únicos</span> para você!</h1>
 		<p>
-			Nós criamos ambientes exclusívos e únicos, com muito bom gosto e profissionalismo, investimos tempo e dedicação no seu projeto.
+			Nós criamos ambientes <strong>exclusívos</strong> e <strong>únicos</strong>, com muito bom gosto e profissionalismo, investimos tempo e <span>dedicação no seu projeto.</span>
 		</p>
 		<p>
-			Tenha ambientes limpos e bem decorados, transmitindo elegância e finesse para todo aquele que estiver ali.
+			Tenha <span>ambientes</span> limpos e bem decorados, transmitindo <strong>elegância</strong> e <strong>finesse</strong> para todo aquele que estiver ali.
 		</p>
 	</div>
 
@@ -26,10 +30,11 @@
 		<a href="https://instagram.com">
 			Instagram
 		</a>
-		<a href="moveis.com">
+		<a href="mailto:oveiscustomizados@gmail.com">
 			Fale Conosco
 		</a>
 	</div>
+	<img id="balls" src="img/balls-decoration.svg" alt="Bolas laranjas no canto inferior direito" />
 </body>
 
 </html>
