--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-	<div>
+	<div id="hero">
 		<img src="img/image 1.jpg" alt="Pessoa em uma sala" />
 
 		<h1>Ambientes <span>únicos</span> para você!</h1>
