--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -9,7 +9,7 @@
 	<title>Móveis Customizados</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:ital,wght@0,700;1,400&display=swap" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:ital,wght@400;700&display=swap" rel="stylesheet">	
 </head>
 
 <body>
@@ -20,13 +20,18 @@
 		<h1>Ambientes <span>únicos</span> para você!</h1>
 		<p>
 			Nós criamos ambientes <strong>exclusívos</strong> e <strong>únicos</strong>, com muito bom gosto e profissionalismo, investimos tempo e <span>dedicação no seu projeto.</span>
-		</p>
-		<p>
+
+			<br/>
+			<br/>
+
 			Tenha <span>ambientes</span> limpos e bem decorados, transmitindo <strong>elegância</strong> e <strong>finesse</strong> para todo aquele que estiver ali.
 		</p>
 	</div>
 
 	<div id="footer">
+
+		<div class="line"></div>
+
 		<a href="https://instagram.com">
 			Instagram
 		</a>
