--- a/Projeto01/index.html
+++ b/Projeto01/index.html
@@ -32,7 +32,7 @@
 
 		<div class="line"></div>
 
-		<a href="https://instagram.com">
+		<a target="_blank" href="https://instagram.com">
 			Instagram
 		</a>
 		<a href="mailto:oveiscustomizados@gmail.com">
