--- a/Projeto01-Desafios/Extra/index.html
+++ b/Projeto01-Desafios/Extra/index.html
@@ -15,12 +15,36 @@
 <body>
 	<div id="upper">
 		<img src="img/img1.png" alt="Desenho representando uma pessoa com localidades ao redor do globo">
-		
+
 		<h1>O seu próximo <span>destino</span> pode estar aqui...</h1>
+
+		<p>
+			Aqui você encontra uma seleção de <span>pacotes completos</span> para as suas férias! 
+			<br/>
+			<br/>
+			Na <strong>Flutuar</strong> você encontra pacotes de viagens nacionais e internacionais que incluem: passagens aéreas, hotéis, café da manhã, e até seguro viagem com <span>preços arrasadores!</span>
+		</p>
+		<p>
+			Se você ainda não tem um destino definido, confira nossa seção de ofertas.
+		</p>
+		
 	</div>
 
 	<div id="footer">
+		<div class="line"></div>
 
+		<a href="https://algumlugar.com" target="_blank">
+			Destino
+		</a>
+		<a href="https://algumlugar.com" target="_blank">
+			Ofertas
+		</a>
+		<a href="https://algumlugar.com" target="_blank">
+			Contato
+		</a>
+		<br/>
+		<br/>
+		<img src="img/Wave.jpg">
 	</div>
 
 </body>
