--- a/Projeto02/index.html
+++ b/Projeto02/index.html
@@ -27,8 +27,8 @@
 
 		<main>
 
-			<section class="texto">
-				<h1>Treino exclusivos para você!</h1>
+			<section>
+				<h1>Treinos <span>exclusivos</span> para você!</h1>
 
 				<p>
 					Nós criamos treinos <strong>exclusivos e únicos para você</strong>.<br />
