--- a/Projeto02/index.html
+++ b/Projeto02/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+	<head>
+	<link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Treine me</title>
-	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,28 +28,28 @@
 	
 		<main>
 
-			<section class="texto">
-				<h1>Treino exclusivos para você!</h1>
+			<section>
+				<h1>Treinos <span>exclusivos</span> para você!</h1>
 
 				<p>
-					Nós criamos treinos <strong>exclusivos e únicos para você</strong>.<br/>
+					Nós criamos treinos <strong>exclusivos e únicos para você</strong>.<br />
 					Invista no seu corpo e tenha muito mais performance e qualidade de vida.
 				</p>
 
-			<button>
-				<img src="img/whatsapp.svg" alt="whatsapp">
-				Comece já
-			</button>
+				<button>
+					<img src="img/whatsapp.svg" alt="whatsapp">
+					Comece já
+				</button>
 			</section>
 
 			<img src="img/fitness-jump.png" alt="Mulher pulando corda">
-	
-		</main>
-	
+
+		</main>	
+
 		<footer>
-			fale concosco no instagram <a href="https://instagram.com/treine.me">@treine.me</a> 
+			fale concosco no instagram <a href="https://instagram.com/treine.me">@treine.me</a>
 		</footer>
-	</div>	
+	</div>
 </body>
 
 </html>
