--- a/Projeto02/index.html
+++ b/Projeto02/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-	<head>
+<head>
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Treine me</title>
-	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
 
 	<div class="page">
-		<header>
-			<img src="img/Logo.svg" alt="treine.me">
-			
-			<nav>
-				<ul>
-					<li>Home</li>
-					<li>Sobre</li>
-					<li>Treinar</li>
-				</ul>
-			</nav>			
-		</header>
-	
+
+		<nav>
+			<a href="#"><img src="img/Logo.svg" alt="treine.me"></a>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Sobre</a></li>
+				<li><a href="#">Treinar</a></li>
+			</ul>
+		</nav>
+
 		<main>
 
 			<section>
@@ -44,7 +43,7 @@
 
 			<img src="img/fitness-jump.png" alt="Mulher pulando corda">
 
-		</main>	
+		</main>
 
 		<footer>
 			fale concosco no instagram <a href="https://instagram.com/treine.me">@treine.me</a>
