--- a/Projeto02/index.html
+++ b/Projeto02/index.html
@@ -45,6 +45,8 @@
 
 		</main>
 
+		<img id="balls" src="img/balls.svg">
+
 		<footer>
 			fale concosco no instagram <a href="https://instagram.com/treine.me">@treine.me</a>
 		</footer>
