--- a/Projeto02-Desafios/Avancado/index.html
+++ b/Projeto02-Desafios/Avancado/index.html
@@ -2,11 +2,16 @@
 <html lang="pt-br">
 
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Rocket.sect</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="images/padlock-decoration.svg" type="image/x-icon">
+	<link
+		href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@400;700&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
@@ -25,18 +30,22 @@
 		<section>
 			<h1>Seus dados estão <span>protegidos</span>?</h1>
 			<p>
-			A informação é fundamental e de extrema importância para qualquer empresa.
-			</br>
-			Aqui vai um texto como se fosse uma empresa de segurança da informação apresentando o seu produto e com o texto todo estilizado.
+				A informação é fundamental e de <strong>extrema importância</strong> para qualquer empresa.
+		</br>	
+		</br>
+				Aqui vai um <strong>texto</strong> como se fosse uma empresa de <span>segurança da informação</span>
+				apresentando o seu produto e com o texto todo estilizado.
 			</p>
 		</section>
 	</main>
 
 	<footer>
-		para mais informações nos siga no instagram <a href="https://instagram.com/rocketsect" target="_blank">@rocketsect</a>
-	</footer>	
+		<div id="line"></div>
+		para mais informações nos siga no instagram <a href="https://instagram.com/rocketsect"
+			target="_blank">@rocketsect</a>
+	</footer>
 
-	<img src="images/padlock-decoration.svg" alt="Logo">
+	<img id="lock" src="images/padlock-decoration.svg" alt="Logo">
 </body>
 
 </html>
