--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -23,6 +23,10 @@
 
 			<fieldset>
 				<legend>Informações do Evento</legend>
+
+				<div class="input-wrapper">
+					<label for="envent-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
+				</div>
 			</fieldset>
 
 		</form>
