--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -22,11 +22,30 @@
 		<form>
 
 			<fieldset>
-				<legend>Informações do Evento</legend>
-				<div class="input-wrapper">
-					<label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-					<input type="text" id="event-title"/>
+				<div class="fieldset-wrapper">
+					<legend>Informações do Evento</legend>
+	
+					<div class="input-wrapper">
+						<label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
+						<input type="text" id="event-title"/>
+					</div>
+	
+					<div class="input-wrapper">
+						<label for="event-link">Link do evento <span>(comece com https://)</span></label>
+						<input type="url" id="event-link"/>
+					</div>
+
+					<div class="input-wrapper">
+						<label for="event-whatsapp">Whatsapp <span>(somente números)</span></label>
+						<input type="number" id="event-whatsapp"/>
+					</div>
+
+					<div class="input-wrapper">
+						<label for="event-extra">Informações extras</label>
+						<textarea id="event-extra"></textarea>
+					</div>
 				</div>
+
 			</fieldset>
 
 		</form>
