--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -73,6 +73,30 @@
 				</div>
 			</fieldset>
 
+			<fieldset>
+				<div class="fieldset-wrapper">
+					<legend>Dia e hora</legend>
+
+					<div class="col-3">
+						<div class="input-wrapper">
+							<label for="event-data">Data</label>
+							<input type="date" id="event-data"/>
+						</div>
+
+						<div class="input-wrapper">
+							<label for="event-begin">Das</label>
+							<input type="time" id="event-begin"/>
+						</div>
+
+						<div class="input-wrapper">
+							<label for="event-end">Até</label>
+							<input type="time" id="event-end"/>
+						</div>
+					</div>
+
+
+			</fieldset>
+
 		</form>
 	</div>
 
