--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -70,6 +70,11 @@
 						<label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
 						<input type="password" id="event-password"/>
 					</div>
+
+					<div class="checkbox-wrapper">
+						<input type="checkbox" id="event-private"/>
+						<label for="event-private">Evento privado</label>
+					</div>
 				</div>
 			</fieldset>
 
@@ -94,10 +99,17 @@
 						</div>
 					</div>
 
+					
+
 
 			</fieldset>
+			
 
 		</form>
+
+		<footer class="button-save">
+			<input class="button" type="submit" value="Salvar evento">
+		</footer>
 	</div>
 
 </body>
