--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -19,7 +19,7 @@
 			<p>O primeiro passo, é preencher esse
 				formulário de inscrição.</p>
 		</header>
-		<form>
+		<form id="-my-form">
 
 			<fieldset>
 				<div class="fieldset-wrapper">
@@ -27,7 +27,7 @@
 	
 					<div class="input-wrapper">
 						<label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-						<input type="text" id="event-title"/>
+						<input type="text" id="event-title" required/>
 					</div>
 	
 					<div class="input-wrapper">
@@ -108,7 +108,7 @@
 		</form>
 
 		<footer class="button-save">
-			<input class="button" type="submit" value="Salvar evento">
+			<input class="button" form="my-form" type="submit" value="Salvar evento">
 		</footer>
 	</div>
 
