--- a/Projeto03/index.html
+++ b/Projeto03/index.html
@@ -27,7 +27,7 @@
 	
 					<div class="input-wrapper">
 						<label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-						<input type="text" id="event-title" required/>
+						<input type="text" id="event-title" required minlength="8"/>
 					</div>
 	
 					<div class="input-wrapper">
@@ -68,7 +68,7 @@
 
 					<div class="input-wrapper">
 						<label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
-						<input type="password" id="event-password"/>
+						<input type="password" id="event-password"  required minlength="8"/>
 					</div>
 
 					<div class="checkbox-wrapper">
@@ -108,7 +108,9 @@
 		</form>
 
 		<footer class="button-save">
-			<input class="button" form="my-form" type="submit" value="Salvar evento">
+			<button form="my-form">
+			Salvar evento
+			</button>
 		</footer>
 	</div>
 
