--- a/Projeto03/Avancado/index.html
+++ b/Projeto03/Avancado/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fotoblog</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -25,55 +26,55 @@
 
 		<main>
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/1.jpg" alt="">
 				<h3>Workspace elétrica</h3>
 				<span>tag</span>
 			</div>
 
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/2.jpg" alt="">
 				<h3>Dark and red</h3>
 				<span>tag</span>
 			</div>
 
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/3.jpg" alt="">
 				<h3>Organização e grids</h3>
 				<span>tag</span>
 			</div>
 			
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/4.jpg" alt="">
 				<h3>Colméia</h3>
 				<span>tag</span>
 			</div>
 			
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/5.jpg" alt="">
 				<h3>Setup de escritor</h3>
 				<span>tag</span>
 			</div>
 			
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/6.jpg" alt="">
 				<h3>Ergonomia e cores</h3>
 				<span>tag</span>
 			</div>
 			
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/7.jpg" alt="">
 				<h3>Show de luzes</h3>
 				<span>tag</span>
 			</div>
 			
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/8.jpg" alt="">
 				<h3>Deep purple</h3>
 				<span>tag</span>
 			</div>
 			
 			<div class="card">
-				<img src="" alt="">
+				<img src="./img/9.jpg" alt="">
 				<h3>Multi-Screen</h3>
 				<span>tag</span>
 			</div>
