--- a/Projeto03/Avancado/index.html
+++ b/Projeto03/Avancado/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-br">
 
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fotoblog</title>
@@ -9,7 +12,6 @@
 </head>
 
 <body>
-	<div class="page">
 		<header>
 			<img src="./img/camera.jpg" alt="logo de camera">
 			<a href="#">Home</a>
@@ -80,8 +82,7 @@
 			</div>
 		</main>
 
-		<footer><p>© 2023 - Rocketseat Explorer</p></footer>
-	</div>
+		<footer><p><strong>© 2023 - Rocketseat Explorer</strong></p></footer>
 
 
 </body>
