--- a/Projeto03-Desafios/Blogatos/index.html
+++ b/Projeto03-Desafios/Blogatos/index.html
@@ -2,41 +2,77 @@
 <html lang="pt-br">
 
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Blog de Gatos</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<header class="container">
-		<a href="#"><img src="./img/paw.png" alt="logo de pata de gato"></a>
+		<img src="./img/paw.png" alt="logo de pata de gato">
 		<form>
 			<label for="busca">Pesquise por artigos</label>
 			<input type="text" placeholder="Pesquise por artigos">
 		</form>
-		<img src="./img/snoop.jpg" alt="logo de perfil">
+		<img class="perfil" src="./img/snoop.jpg" alt="logo de perfil">
 	</header>
+
 	<main>
-		<div class="titulo">
-			<h1>Seriam os gatos astronautas?</h1>
-			<button><img src="./img/like.png" alt="botão de gostei"></button>
-			<button><img src="./img/deslike.png" alt="botão de não gostei"></button>
+		<img src="./img/1.jpg" alt="">
+		<div class="container">
+			<div class="titulo">
+				<h1>Seriam os gatos astronautas?</h1>
+				<button><img src="./img/like.png" alt="botão de gostei"></button>
+				<button><img src="./img/deslike.png" alt="botão de não gostei"></button>
+			</div>
+			<p>
+				Os gatos são animais fascinantes e cercados de mistérios. De temperamento independente e misterioso, esses felinos são conhecidos por sua agilidade, elegância e um comportamento muitas vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço na internet e entre teóricos de conspiração: seriam os gatos astronautas?<br>
+				A teoria sugere que os gatos não são animais terrestres, mas sim seres extraterrestres enviados para realizar uma missão específica em nosso planeta. Há relatos históricos que apontam para o fato de que os gatos eram considerados seres sagrados em diferentes culturas e até mesmo associados a figuras divinas. Isso poderia indicar que os gatos têm uma origem muito mais mística do que se pensava anteriormente.<br>
+				<br>
+				Além disso, há teóricos que acreditam que os felinos possuem habilidades telepáticas e são capazes de se comunicar com outras espécies alienígenas. Essa crença baseia-se em relatos de pessoas que afirmam terem visto gatos reagindo a estímulos que não são perceptíveis aos seres humanos, ou até mesmo se comportando de maneira incomum durante eventos astronômicos, como uma aurora boreal. Esses e outros indícios foram interpretados como sinais de que os gatos seriam seres interplanetários.
+			</p>
 		</div>
-		<p>
-			Os gatos são animais fascinantes e cercados de mistérios. De temperamento independente e misterioso, esses felinos são conhecidos por sua agilidade, elegância e um comportamento muitas vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço na internet e entre teóricos de conspiração: seriam os gatos astronautas?<br>
-			A teoria sugere que os gatos não são animais terrestres, mas sim seres extraterrestres enviados para realizar uma missão específica em nosso planeta. Há relatos históricos que apontam para o fato de que os gatos eram considerados seres sagrados em diferentes culturas e até mesmo associados a figuras divinas. Isso poderia indicar que os gatos têm uma origem muito mais mística do que se pensava anteriormente.<br>
-			<br>
-			Além disso, há teóricos que acreditam que os felinos possuem habilidades telepáticas e são capazes de se comunicar com outras espécies alienígenas. Essa crença baseia-se em relatos de pessoas que afirmam terem visto gatos reagindo a estímulos que não são perceptíveis aos seres humanos, ou até mesmo se comportando de maneira incomum durante eventos astronômicos, como uma aurora boreal. Esses e outros indícios foram interpretados como sinais de que os gatos seriam seres interplanetários.
-		</p>
 	</main>
 
-	<aside>
+	<aside class="container">
 		<h1>Artigos relacionados</h1>
 		<div class="artigo">
-			
+			<div class="item">
+				<img src="./img/2.jpg" alt="">
+				<h2>Sábado preguiçoso</h2>
+				<p>Descubra atividades interessantes para fazer com seu pet durante os finais de semana.</p>				
+			</div>
+
+			<div class="item">
+				<img src="./img/3.jpg" alt="">
+				<h2>Balaio de gatos</h2>
+				<p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>				
+			</div>
+
+			<div class="item">
+				<img src="./img/4.jpg" alt="">
+				<h2>Cartela de cores</h2>
+				<p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam com seu bichano.</p>				
+			</div>
+
+			<div class="item">
+				<img src="./img/5.jpg" alt="">
+				<h2>Os gatos sentem frio?</h2>
+				<p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>				
+			</div>
+
+			<div class="item">
+				<img src="./img/6.jpg" alt="">
+				<h2>Conheça o Moacir</h2>
+				<p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>				
+			</div>
 		</div>
 	</aside>
-	<footer></footer>
+	<footer class="container">© 2023 - Rocketseat Explorer</footer>
 
 </body>
 
