--- a/Projeto-Itensivo/index.html
+++ b/Projeto-Itensivo/index.html
@@ -7,6 +7,42 @@
   <title>Universe</title>
 </head>
 <body>
-  
+  <header>
+    <img src="./img/universo.png">
+    <h1>Explore sem limites</h1>
+    <h2>Porque o aprendizado é contínuo</h2>
+    <img src="./img/seta.png">
+  </header>
+  <main>
+    <article class="cards">
+      <div class="card">
+          
+      </div>
+    </article>
+
+    <article>
+      <legend>Entre em contato</legend>
+      <fieldset>
+        <div class="inputs">
+          <label for="name">Seu nome</label>
+          <input type="text" id="name" placeholder="Seu nome">
+        </div>
+
+        <div class="inputs">
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="Seu nome">
+        </div>
+
+        <div class="inputs">
+          <label for="mensage">Mensagem</label>
+          <textarea name="mensage" id="mensage" cols="30" rows="10" placeholder="Digite sua mensagem aqui..."></textarea>
+        </div>
+      </fieldset>
+
+      <button>Enviar mensagem</button>
+  </main>
+
+  <footer>© 2023 - Rocketseat Explorer</footer>
+
 </body>
 </html>
