--- a/Projeto-Itensivo/index.html
+++ b/Projeto-Itensivo/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;800&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -25,7 +25,6 @@
   <main>
 
     <article class="cards">
-      <div class="container">
         <div class="card">
           <figure>
             <img src="./img/planeta amarelo.png">
@@ -53,20 +52,19 @@
             passos nos aproximam do destino e motivam a continuidade. Não subestime o poder de cada ação rumo ao
             objetivo final.</p>
         </div>
-      </div>
     </article>
 
     <article class="container">
-      <legend>Entre em contato</legend>
       <fieldset>
-        <div class="inputs">
+        <h1>Entre em contato</h1>
+        <div class="inputs" id="user">
           <label for="name">Seu nome</label>
           <input type="text" id="name" placeholder="Seu nome">
         </div>
 
-        <div class="inputs">
+        <div class="inputs" id="email">
           <label for="email">Email</label>
-          <input type="email" id="email" placeholder="Seu nome">
+          <input type="email" id="email" placeholder="Email">
         </div>
 
         <div class="inputs">
@@ -74,9 +72,9 @@
           <textarea name="mensage" id="mensage" cols="30" rows="10"
             placeholder="Digite sua mensagem aqui..."></textarea>
         </div>
+        <button>Enviar mensagem</button>
       </fieldset>
 
-      <button>Enviar mensagem</button>
     </article>
   </main>
 
