--- a/Projeto-Itensivo/index.html
+++ b/Projeto-Itensivo/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header class="container">
-      <figure>
+      <figure id="astro">
         <img src="./img/universo.png">
       </figure>
       <h1>Explore sem limites</h1>
